--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/b9d509b407.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -110,6 +114,13 @@
         </section>
       </div>
     </div>
+    <footer class="mt-5">
+      <div class="text-center">
+        <a href="https://github.com/melodyogonna/hngcv" target="_blank"
+          ><i class="fab fa-github fa-3x"></i
+        ></a>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
