--- a/templates/index.html
+++ b/templates/index.html
@@ -114,11 +114,17 @@
         </section>
       </div>
     </div>
-    <footer class="mt-5">
+    <footer class="mt-5 mb-3">
       <div class="text-center">
-        <a href="https://github.com/melodyogonna/hngcv" target="_blank"
+        <a
+          href="https://github.com/melodyogonna/hngcv"
+          class="mr-4 d-inline-block"
+          target="_blank"
           ><i class="fab fa-github fa-3x"></i
         ></a>
+        <a href="https://zuri.team/" target="_blank" class="d-inline-block m-4"
+          ><img src="https://zuri.team/img/zuri-logo-full.svg" alt="Zuri Logo"
+        /></a>
       </div>
     </footer>
 
