--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                 <label for="name">Name</label>
                 <input
                   type="text"
-                  value="{{.name}}"
+                  placeholder="John Doe"
                   name="name"
                   id="name"
                   class="form-control"
@@ -81,19 +81,9 @@
                 <label for="email">Email</label>
                 <input
                   type="text"
-                  value="{{.email}}"
+                  placeholder="john.doe@email.com"
                   name="email"
                   id="email"
-                  class="form-control"
-                />
-              </div>
-              <div class="form-group mt-3">
-                <label for="phone">Phone</label>
-                <input
-                  type="text"
-                  value="{{.phone}}"
-                  name="phone"
-                  id="phone"
                   class="form-control"
                 />
               </div>
